# opengl-template

./: CMakeLists.txt
src/: main.cpp
